--- a/odaiIndex.html
+++ b/odaiIndex.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="Odai,Hatem,Creative,Factory">
     <meta name="author" content="Odai Hatem">
 
-<title>Odai Hatem - Creative Factory | odai Main Page</title>
+<title>Odai Hatem - Creative Factory | odai Main Page | edit Online </title>
 <link rel="stylesheet" href="home.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
